--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* Ruby version: 1.9.3p484
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
+* System dependencies: sqlite for development, postgres for production.
 
 * Configuration
 
 * Database creation
+	* rake db:create
+    * rake db:migrate
 
 * Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
+    * rake db:setup
 
 * Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+	* git push heroku master
